Fix issue with inline images being way too small

--- a/static/style.css
+++ b/static/style.css
@@ -246,7 +246,7 @@ h6,
 
 .message-box .embed {
   max-width: 99%;
-  max-height: 40%;
+  max-height: 150px;
 }
 
 .chat-name {
